@@ -1,3 +1,9 @@
+2015-04-06         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* awk.h (force_number): Add `!= 0' check to bitwise operation.
+	* awkgram.y: Same, many places.
+	(check_special): Simplify code for checking extension flags.
+
 2015-04-05         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* awkgram.y (install_builtins): If do_traditional is true, do not
